-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.10.0 Beta2
-
None
-
-
c86a33db0 (dev), 6fa36f0c8 (6.10), 04ae1919b (6.9), 349e5c29e (tqtc/lts-6.8)
openDirFd is used by openOrCreateDir is used by getTrashDir
This fails if ~/.local/share/Trash is a symlink because of O_DIRECTORY, but afaiu the trash spec this is wrong and the restriction should only apply to $topdir/.Trash directories (on other filesystems), not the $HOME one as it's only mentioned in the paragraph starting with
(1) An administrator can create an $topdir/.Trash directory...
| For Gerrit Dashboard: QTBUG-138984 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 666502,3 | moveToTrash/XDG: allow $XDG_DATA_HOME/Trash to be a symlink | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 671123,2 | moveToTrash/XDG: allow $XDG_DATA_HOME/Trash to be a symlink | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |
| 671238,2 | moveToTrash/XDG: allow $XDG_DATA_HOME/Trash to be a symlink | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
| 671790,3 | moveToTrash/XDG: allow $XDG_DATA_HOME/Trash to be a symlink | tqtc/lts-6.8 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |